# needybot-core

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  bashrc  install.sh  package.xml  requirements.txt  setup.py
maps/misc/: blank.yaml
src/needybot/communication/: socket_client.py  status_reporter.py  ui.py
src/needybot/control/: health_monitor.py
src/needybot/control/task_server/: base.py  boot_sequence.py  task_server.py  task_server_client.py
src/needybot/control/trees/: base.py  blackboard.py  mayday.py  tasks.py
src/needybot/lib/: action_goal.py  cable.py  channels.py  decorators.py  geometry.py  health_status.py  logger.py  motion.py  movement_tracker.py  needybot_blackboard.py  patterns.py  task_latcher.py  utils.py
src/needybot/services/: base.py  safety_service.py
test/: needybot.test
test/src/: test_needybot_blackboard.py  test_task.py  test_task_server.py  test_ui.py
